feat: configs and studies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=desafio-btg
+
+# autenticação na base de administrador
+spring.data.mongodb.authentication-database=admin
+
+# fará a criação dos indices de forma automática
+spring.data.mongodb.auto-index-creation=true
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+
+# qualquer nome, o spring vai criar ao subir a aplicação
+spring.data.mongodb.database=btgdb
+
+# mesma coisa do docker-compose
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=123
